// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit: Component should render correctly 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="page.edit.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Page"
        id="page.edit.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="page.edit.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Page"
        id="page.edit.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.form
      onSubmit={[Function]}
    >
      <PageForm
        fetchPage={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "pageId": "1",
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Promise {},
              },
            ],
          }
        }
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        isValid={true}
        match={
          Object {
            "params": Object {
              "pageId": "1",
            },
          }
        }
        page={
          Object {
            "folder": Object {
              "id": "1",
            },
          }
        }
        removePage={[Function]}
        values={
          Object {
            "description": "description",
            "keywords": "keywords",
            "title": "title",
          }
        }
      />
      <Styled(Span)
        id="removePageDesktopBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove Page"
          id="page.edit.removePage"
          values={Object {}}
        />
      </Styled(Span)>
      <NavigationContainer
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackButton
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Back"
            id="page.edit.back"
            values={Object {}}
          />
        </BackButton>
        <NextButton
          disabled={false}
          id="savePageBtn"
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="page.edit.save"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </styled.form>
  </LoadingWrapper>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a page will also remove any content under it. Are you sure you want to proceed?"
        id="page.edit.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="page.edit.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="page.edit.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;

exports[`Edit: Component should render correctly with loader 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="page.edit.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Page"
        id="page.edit.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="page.edit.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Page"
        id="page.edit.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.form
      onSubmit={[Function]}
    >
      <PageForm
        fetchPage={[Function]}
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        isValid={true}
        match={
          Object {
            "params": Object {
              "pageId": "1",
            },
          }
        }
        page={
          Object {
            "folder": Object {
              "id": "1",
            },
          }
        }
        removePage={[Function]}
        values={
          Object {
            "description": "description",
            "keywords": "keywords",
            "title": "title",
          }
        }
      />
      <Styled(Span)
        id="removePageDesktopBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove Page"
          id="page.edit.removePage"
          values={Object {}}
        />
      </Styled(Span)>
      <NavigationContainer
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackButton
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Back"
            id="page.edit.back"
            values={Object {}}
          />
        </BackButton>
        <NextButton
          disabled={false}
          id="savePageBtn"
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="page.edit.save"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </styled.form>
  </LoadingWrapper>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a page will also remove any content under it. Are you sure you want to proceed?"
        id="page.edit.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="page.edit.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="page.edit.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;
